Crosshairs plugin development
Signed-off-by: Ken Stowell <ken@cdbaby.com>

--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -7,6 +7,7 @@
 		<?php echo $this->headScript(); ?>
 	</head>
 	<body>
+		<div id="crosshairs"></div>
 		<div id="page-wrapper">
 			<header id="main-header">
 				<nav id="main-nav">
@@ -19,7 +20,6 @@
 					</ul>
 				</nav>
 			</header>
-			<div id="cross-hairs"></div>
 			<?php echo $this->layout()->content; ?>
 		</div>
 	</body>
