--- a/public/styles/default.css
+++ b/public/styles/default.css
@@ -71,7 +71,7 @@ header#main-header nav#main-nav ul#main-nav-list li.main-nav-list-item a.main-na
 /**********************************************************************************************************************************************************
 * CONTENT       																																																															            *
 *********************************************************************************************************************************************************/
-div#cross-hairs {
+div#crosshairs {
     position: fixed;
     width:10px;
     height:10px;
