--- a/application/views/scripts/index/index.phtml
+++ b/application/views/scripts/index/index.phtml
@@ -1,3 +1,15 @@
 <div id="position-one">
 	HAI
 </div>
+<div id="position-two">
+	HAI AGAINS
+</div>
+<div id="position-three">
+	HAI AGAINS
+</div>
+<div id="position-four">
+	HAI AGAINS
+</div>
+<div id="position-five">
+	HAI AGAINS
+</div>
