--- a/public/styles/index/styles.css
+++ b/public/styles/index/styles.css
@@ -23,6 +23,30 @@ div#position-one {
     top: 400px;
     left: 1920px;
 }
+
+div#position-two {
+    position: absolute;
+    top: 800px;
+    left: 3020px;
+}
+
+div#position-three {
+    position: absolute;
+    top: 200px;
+    left: 1020px;
+}
+
+div#position-four {
+    position: absolute;
+    top: 1100px;
+    left: 2020px;
+}
+
+div#position-five {
+    position: absolute;
+    top: 600px;
+    left: 5020px;
+}
 /**********************************************************************************************************************************************************
  * FOOTER      																																																															            *
  *********************************************************************************************************************************************************/
